# engine

./: .gitignore  CMakeLists.txt
asset/demo/: CMakeLists.txt
asset/demo/tower_defense/: demo_rtype.cpp
asset/test/: CMakeLists.txt
asset/test/engine/: test_engine.cpp
asset/test/googletest/googletest/scripts/: upload.py
assets/: Lifecycle.xml  Plugins.xml
assets/cmake/: CMakeDemo.cmake  CMakeTest.cmake
assets/demos/: CMakeLists.txt
assets/tests/: CMakeLists.txt
assets/tests/test_engine/: CMakeLists.txt
assets/tests/test_manager/: CMakeLists.txt  test_manager.cpp
assets/tests/test_property/: test_property.cpp
cmake/: CMakeDemo.cmake  CMakePlatform.cmake  CMakePlugin.cmake  CMakeTest.cmake  FindSDL2.cmake
demo/: CMakeLists.txt
demo/demo_td/: CMakeLists.txt  demo_td.cpp
demos/: CMakeLists.txt
demos/demo_td/: CMakeLists.txt  demo_td.cpp
dude/: CMakeLists.txt
dude/demo/demo_td/: CMakeLists.txt
dude/include/dude/behavior/: behavior.hpp
dude/src/core/: engine.cpp
dude/src/dude/serialization/: json_saver.cpp
dude/test/: CMakeLists.txt
dude/test/googletest/googletest/include/gtest/internal/: gtest-port.h
dude/test/test_engine/: CMakeLists.txt
dude/test/test_serialization/: CMakeLists.txt
engine/include/dude/behavior/: behavior.hpp
engine/include/dude/core/: engine.hpp  library.hpp  scene.hpp  timer.hpp
engine/include/dude/entity/: entity.hpp  transform.hpp
engine/include/dude/plugin/: behavior.hpp  factory.hpp  manager.hpp  plugin.hpp
engine/include/dude/property/: property.hpp
engine/include/dude/serialization/: json_saver.hpp
engine/include/dude/transform/: transform.hpp
engine/include/dude/utility/: find.hpp  library.hpp  timer.hpp
engine/src/behavior/: behavior.cpp
engine/src/core/: engine.cpp  library.cpp  scene.cpp  timer.cpp
engine/src/entity/: entity.cpp  transform.cpp
engine/src/plugin/: behavior.cpp  factory.cpp  manager.cpp  plugin.cpp
engine/src/property/: property.cpp
engine/src/serialization/: json_saver.cpp
engine/src/transform/: transform.cpp
engine/src/utility/: find.cpp  library.cpp  timer.cpp
include/dude/: system.hpp
include/dude/behavior/: behavior.hpp
include/dude/core/: scene.hpp
include/dude/entity/: entity.hpp
include/dude/serialization/: json_saver.hpp
plugins/: CMakeLists.txt
plugins/behaviors/: CMakeLists.txt
plugins/behaviors/bullet/: CMakeLists.txt
plugins/behaviors/bullet/include/bullet/: bullet.hpp
plugins/behaviors/bullet/src/: bullet.cpp
plugins/behaviors/projectile/: CMakeLists.txt
plugins/behaviors/projectile/include/projectile/: projectile.hpp
plugins/behaviors/projectile/src/: projectile.cpp
plugins/input/: CMakeLists.txt
plugins/input/include/input/: input.hpp
plugins/input/src/: input.cpp
plugins/managers/: CMakeLists.txt
plugins/managers/input/: CMakeLists.txt
plugins/managers/input/include/input/: input.hpp
plugins/managers/input/src/: input.cpp
plugins/managers/window/: CMakeLists.txt
plugins/managers/window/include/window/: window.hpp
plugins/managers/window/src/: window.cpp
src/dude/behavior/: behavior.cpp
src/dude/core/: scene.cpp
src/dude/entity/: entity.cpp
src/dude/serialization/: json_saver.cpp
test/googletest/googletest/test/: gtest-port_test.cc
test/test_engine/: CMakeLists.txt  test_engine.cpp
test/test_serialization/: CMakeLists.txt  test_serialization.cpp
tests/: CMakeLists.txt
tests/test_engine/: CMakeLists.txt  test_engine.cpp
tests/test_plugin_factory/: CMakeLists.txt  test_plugin_factory.cpp
tests/test_property/: CMakeLists.txt  test_property.cpp
tests/test_serialization/: CMakeLists.txt
vendors/rapidjson/: encodings.h
